[build-system]
requires = ["setuptools>=61", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "company_theme"
version = "0.0.1"
description = "Company theme for ERPNext Desk"
readme = "README.md"
requires-python = ">=3.10"
dependencies = []   # don't pin frappe here; FC handles it

[tool.setuptools]
include-package-data = true

[tool.setuptools.packages.find]
include = ["company_theme*"]
